# dashprint

./: .gitmodules  CMakeLists.txt  TODO  Toolchain-rpi-native.cmake  Toolchain-rpi.cmake  Toolchain-rpidocker.cmake  dashprint_config.h.in  pi3print_config.h.in  rpibuild.sh
cmake/: Findavformat.cmake  Findbcmhost.cmake
src/: AuthManager.cpp  AuthManager.h  CMakeLists.txt  CameraManager.cpp  CameraManager.h  FileManager.cpp  FileManager.h  JSValuePP.h  MultipartFormData.cpp  MultipartFormData.h  OctoprintRestApi.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  PrintJob.cpp  PrintJob.h  Printer.cpp  Printer.h  PrinterDiscovery.cpp  PrinterDiscovery.h  PrinterManager.cpp  PrinterManager.h  RestApi.cpp  StaticPrinterDiscovery.cpp  StaticPrinterDiscovery.h  UdevPrinterDiscovery.cpp  UdevPrinterDiscovery.h  WebRESTHandler.cpp  WebRESTHandler.h  WebServer.cpp  WebServer.h  WebSession.cpp  WebSession.h  WebsocketSession.cpp  WebsocketSession.h  file_body_posix.ipp  main.cpp  util.cpp  util.h
src/api/: AuthApi.cpp  AuthApi.h  AuthHelpers.cpp  AuthHelpers.h  CameraApi.cpp  CameraApi.h  FileApi.cpp  FileApi.h  OctoprintRestApi.cpp  OctoprintRestApi.h  PrintApi.cpp  PrintApi.h  RestApi.cpp  WebSockets.cpp  WebSockets.h
src/bcrypt/: bcrypt.c  blf.h  blowfish.c
src/binfile/: CMakeLists.txt  api.h  binfile.cpp  cstring_filter.h
src/camera/: Camera.cpp  Camera.h  MMALCamera.cpp  MMALCamera.h  MMALEncoder.cpp  MMALEncoder.h  V4L2GenericCamera.cpp  V4L2GenericCamera.h  V4L2H264Camera.cpp  V4L2H264Camera.h  V4L2RawCamera.cpp  V4L2RawCamera.h  V4L2RawCameraWithMMAL.cpp  V4L2RawCameraWithMMAL.h
src/mp4/: MP4Atom.h  MP4Streamer.cpp  MP4Streamer.h
src/quickjs/: CMakeLists.txt  quickjs.h  quickjs.hpp
src/wasm/: CMakeLists.txt
src/wasm/gcode-analyzer/: CMakeLists.txt  analyzer.cpp
src/wasm/nanolibc/: CMakeLists.txt  libc.cpp
src/wasm/nanolibc/musl-include/arch/wasm/: atomic_arch.h  crt_arch.h  pthread_arch.h  reloc.h  syscall_arch.h  syscall_list.h  wasm.syms
src/wasm/nanolibc/musl-include/arch/wasm/bits/: alltypes.h  alltypes.h.in  hwcap.h  ipc.h  limits.h  mman.h  msg.h  posix.h  setjmp.h  signal.h  socket.h  stat.h  statfs.h  stdint.h  syscall.h.in
src/web/: MultipartFormData.cpp  MultipartFormData.h  WebRequest.cpp  WebRequest.h  WebResponse.cpp  WebResponse.h  WebRouter.cpp  WebRouter.h  WebServer.cpp  WebServer.h  WebSession.cpp  WebSession.h  WebSocketHandler.cpp  WebSocketHandler.h  web.h
test/: MultipartTest.cpp  PrinterTest.cpp
web/: .angular-cli.json  package-lock.json  package.json
web.old/: package-lock.json  package.json
web.old/src/: index.html  tsconfig.app.json
web.old/src/app/: Modal.ts  app.component.css  app.component.html  app.component.ts  print.service.spec.ts  print.service.ts  websocket.service.ts
web.old/src/app/addprinter/: addprinter.component.css  addprinter.component.spec.ts  addprinter.component.ts
web.old/src/app/canvas/: TemperatureGraph.ts
web.old/src/app/webgl/: Lines.ts  stlmodel.service.ts
web.old/src/assets/workers/: STLModel.worker.js
web/src/: index.html
web/src/app/: Printer.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  modal.service.ts  print.service.ts  websocket.service.ts
web/src/app/addprinter/: addprinter.component.html  addprinter.component.ts
web/src/app/canvas/: TemperatureGraph.ts
web/src/app/webgl/: Camera.ts  GLView.ts  Lines.ts  PrinterView.ts  Renderable.ts  Triangles.ts  stlmodel.service.spec.ts  stlmodel.service.ts
